# enterprise-match-engine-demo

./: ANONYMIZATION_REPORT.md  README.md  app.py  config.py  database.py  demo_mode.py  external_api_client.py  external_sync_jobs.py  jobs.py  jobs_common.py  mapper_region.csv  mapper_sync_jobs.py  matching_final_jobs.py  matching_internal_jobs.py  matching_jobs.py  matching_transport_jobs.py  matching_validation_jobs.py  models.py  notification_jobs.py  oracle_client.py  pipeline.py  product_to_external_mapper.csv  pyproject.toml  queue_build_jobs.py  queue_cleanup_jobs.py  queue_jobs.py  queue_type1_build_jobs.py  queue_type2_build_jobs.py  requirements.txt  scheduler.py  source_internal_sales_sync_jobs.py  source_manual_review_sync_jobs.py  source_oracle_ticket_sync_jobs.py  source_sync_jobs.py  source_validation_jobs.py  status_sync_jobs.py  sync_jobs.py  utils.py  validation_final_consistency_jobs.py  validation_header_position_jobs.py  (+2 more)
tests/: test_jobs_common.py  test_utils.py
